# JamPDF

./: README.md  pyproject.toml
jampdf/: cli.py  config.py  custom_types.py  markdown.py  template.py
jampdf/defaults/: default.html
test/: _config.yaml
test/_content/: test.md
test/_dist/: test.html
tests/: test_cli.py
